# fastncut

./: .gitignore  README.md  pyproject.toml
fastncut/: __init__.py  fastncut.py
notebooks/: README.md  bird-or-dog.ipynb  cocoval-depthanythingv2.ipynb  cocoval-dinov1.ipynb  cocoval-dinov2.ipynb  cocoval-dinov3.ipynb  comparison.ipynb  demo-dinov3.ipynb  demo-hue.ipynb  demo_intensity.ipynb  model-testing.ipynb  model-training.ipynb  ocr.ipynb  pypi.ipynb
notebooks-with-outputs/: README.md  bird-or-dog-outputs.ipynb  cocoval-depthanythingv2-outputs.ipynb  cocoval-dinov1-outputs.ipynb  cocoval-dinov2-outputs.ipynb  cocoval-dinov3-outputs.ipynb  demo-dino3-outputs.ipynb  demo-hue-outputs.ipynb  demo_intensity-outputs.ipynb  model-testing-outputs.ipynb  ocr-outputs.ipynb  pypi-outputs.ipynb
tests/: test_fastncut.py
