[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fastncut"
version = "2.0.6"
description = "An agnostic algorithm for bipartitioning of feature maps. Really fast, even for high resolutions."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"

[project.urls]
Documentation = "https://www.agentspace.org/fastncut/fastncut.html"
Source = "https://github.com/andylucny/fastncut"
Tracker = "https://github.com/andylucny/fastncut/issues"

[tool.setuptools.packages.find]
where = ["."]